<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">NAlarm</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="no_alarms">No Alarms</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="alarm_icon_desc">AlarmPicture</string>
    <string name="vibrate_label">Vibrate</string>
    <string name="alarm_repeat_label">Repeat</string>
    <string name="ring_label">Alarm Sound</string>
    <string name="default_alrm_time" translatable="false">08:00</string>
    <string name="alarm_name_hint">Alarm Name</string>
    <string name="alarm_label_hint">Label</string>
    <string name="alarm_sound">No Sound</string>
    <string name="alarm_quit_message">do not save?</string>
    <string name="alarm_save_message">save and quit</string>
    <string name="every_day">Every day</string>
    <string name="day_concat" translatable="false">", "</string>
    <string name="no_label">No Label</string>
    <string name="select_alrm_ring_title">Select Ringtone</string>
    <string name="alarm_is_dismissed"><xliff:g id="alarm_time" example="14:20">%s</xliff:g> alarm dismissed</string>

    <string-array name="alarm_set">
        <item>Alarm set for less than 1 minute from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g>, <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g>, and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
    </string-array>
    <plurals name="days">
        <!-- Duration for one day -->
        <item quantity="one">1 day</item>
        <!-- Duration for more than one day -->
        <item quantity="other"><xliff:g id="number" example="7">%s</xliff:g> days</item>
    </plurals>

    <!-- Alarm confirmation toast, timer notification and world clock ahead/behind: hours -->
    <plurals name="hours">
        <!-- Duration for one hour -->
        <item quantity="one">1 hour</item>
        <!-- Duration for more than one hour -->
        <item quantity="other"><xliff:g id="number" example="7">%s</xliff:g> hours</item>
    </plurals>

    <plurals name="hours_short">
        <!-- Duration for one hour [CHAR LIMIT=8] -->
        <item quantity="one">1 hr</item>
        <!-- Duration for more than one hour [CHAR LIMIT=8]-->
        <item quantity="other"><xliff:g id="number" example="7">%s</xliff:g> hr</item>
    </plurals>

    <!-- Text to appear in the notification title while an alarm is about to go off. -->
    <string name="alarm_alert_predismiss_title">Upcoming alarm</string>

    <!-- Button labels on the alarm dialog: Dismiss -->
    <string name="alarm_alert_dismiss_text">Dismiss</string>

    <!-- Default label to display for an alarm -->
    <string name="default_label">Alarm</string>
    <!-- Alarm confirmation toast and timer notification: minutes -->
    <plurals name="minutes">
        <!-- Duration for one minute -->
        <item quantity="one">1 minute</item>
        <!-- Duration for more than one minute -->
        <item quantity="other"><xliff:g id="number" example="7">%s</xliff:g> minutes</item>
    </plurals>
    <string-array name="alarm_name_list">
        <item>Get Up</item>
        <item>Eat</item>
        <item>Sleep</item>
        <item>Work</item>
        <item>Game</item>
        <item>Movie</item>
        <item>Music</item>
        <item>Running</item>
        <item>Walk</item>
    </string-array>
    
    <string name="nalarm_about">
        learn android in study Jams
        design a alarm app
        feature:
            say alarm info, when alarm is coming.
    </string>
</resources>
